Fix width of youtube video in invisible monsters blog post for mobile
Fixes #14

--- a/source/css/styles.scss
+++ b/source/css/styles.scss
@@ -251,6 +251,17 @@ footer {
   margin-right: 1em;
 }
 
+/* media specific styles */
+.youtube {
+  height: 315px;
+  width: 560px;
+
+  @media screen and (max-width: 600px) {
+    height: 150px;
+    width: 300px;
+  }
+}
+
 
 /* page specific styles */
 .index {
